test/parse/expr/bad-block-sig-multi.txt
;;; TOOL: wat2wasm
;;; ERROR: 1
(module
  (func
    block (result i32 i32)
      i32.const 1
      i32.const 1
    end
    drop
    drop)

  (func
    i32.const 1
    block (param i32)
      drop
    end))
(;; STDERR ;;;
out/test/parse/expr/bad-block-sig-multi.txt:5:5: error: multiple result values not currently supported.
    block (result i32 i32)
    ^^^^^
out/test/parse/expr/bad-block-sig-multi.txt:14:5: error: block params not currently supported.
    block (param i32)
    ^^^^^
;;; STDERR ;;)
